--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
 <div class="controls container">
     <div class="row">
-        <div class="form-wrapper col-md-5">
+        <div class="form-wrapper col-md-12 col-lg-5">
             <div class="controls-wrapper">
             <form role="form">
                 <div class="form-group">
@@ -51,7 +51,7 @@
             </form>
         </div>
 
-        <div class="poster-wrapper col-md-7">
+        <div class="poster-wrapper col-md-12 col-lg-7">
             <div id="display-wrapper">
                 <label>{% if session.screen_name %}@{{ session.screen_name }}{% else %}@user{% endif %}</label>
                 <div id="display-status"></div>
@@ -88,9 +88,9 @@
             <div class="col-md-12">
                 <ul>
                     <li>Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014.</li>
-                    <li>Inspired by <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a>.</li>
+                    <li>Based on <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a>.</li>
                     <li>This site stores no user data.</li>
-                    <li>Send feedback or questions to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>.</li>
+                    <li>Send feedback to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>.</li>
                 </ul>
             </div>
         </div>
