--- a/templates/_base.html
+++ b/templates/_base.html
@@ -34,12 +34,12 @@
     {% endblock outer_content %}
 
     <script type="text/javascript" src="{{ S3_BASE_URL }}/js/lib/html2canvas.min.js"></script>
+    <script type="text/javascript" src="{{ S3_BASE_URL }}/js/lib/twitter-text.min.js"></script>
 
     {{ JS.push('js/lib/jquery.js') }}
     {{ JS.push('js/lib/underscore.js') }}
     {{ JS.push('js/lib/bootstrap.js') }}
     {{ JS.push('js/lib/jquery.cookie.js') }}
-    {{ JS.push('js/lib/twitter-text.js') }}
     {{ JS.push('js/app_config.js') }}
     {{ JS.push('js/console.js') }}
     {{ JS.push('js/app.js') }}
