Tweak status label. Closes #65.

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             <div class="controls-wrapper">
             <form role="form">
                 <div class="form-group">
-                    <label for="status">Status *</label>
+                    <label for="status">Tweet text *</label>
                     <textarea id="status" name="status" class="form-control"></textarea>
                     <div class="count"></div>
                 </div>
