--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,6 @@
 <div id="header" class="container">
     <div class="row">
         <div class="col-md-12">
-            <img src="assets/logo36.png" />
-
             <h1>Pixelcite <small>Quotations for Twitter</small></h1>
 
             <div class="twitter">
@@ -63,8 +61,7 @@
                 <p class="attribution"></p>
 
                 <div class="logo-wrapper">
-                    <img class="logo" src="assets/logo36.png" />
-                    <h1>pixelcite.com</h1>
+                    <h1>&middot; pixelcite.com</h1>
                 </div>
             </div>
             <div class="buttons">
