--- a/less/app.less
+++ b/less/app.less
@@ -210,21 +210,11 @@ body {
 		padding: 0 0 @grid-gutter-width @grid-gutter-width;
 		margin: 0;
 
-        .logo {
-            display: block !important;
-            float: left;
-            vertical-align: bottom;
-
-            height: 18px;
-            width: 18px;
-            margin-top: 3px;
-        }
-
         h1 {
             display: block !important;
             float: left;
 
-            margin: 0 0 0 5px;
+            margin: 0;
             padding: 0;
             font-size: 18px;
         }
