--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                 <p class="attribution"></p>
 
                 <div class="logo-wrapper">
-                    <h1>Made with Pixelcite</h1>
+                    <h1>Made with Pixelcite.com</h1>
                 </div>
             </div>
             <div class="buttons">
