--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@
         <div class="row">
             <div class="col-md-12">
                 <ul>
+                    <li>Follow <a href="https://twitter.com/pixelcite">@pixelcite</a>.</li>
                     <li>Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014.</li>
                     <li>Based on <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a>.</li>
                     <li>This site stores no user data.</li>
