Better font control and colors.

--- a/less/app.less
+++ b/less/app.less
@@ -115,7 +115,15 @@ body {
         .count {
             float: left;
             text-align: right;
-            width: @small-control-width;;
+            width: @small-control-width;
+        }
+
+        .bootstrap-touchspin .input-group-btn {
+            width: auto;
+        }
+
+        #fontsize {
+            width: 220px;
         }
     }
 }
