--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,6 +12,7 @@
 
     <!-- CSS -->
     {{ CSS.push('less/app.less') }}
+    {{ CSS.push('css/bootstrap.colorpickersliders.css') }}
     {% block extra_css %}{% endblock extra_css %}
     {{ CSS.render('css/app.min.css') }}
 
@@ -40,6 +41,9 @@
     {{ JS.push('js/lib/underscore.js') }}
     {{ JS.push('js/lib/bootstrap.js') }}
     {{ JS.push('js/lib/jquery.cookie.js') }}
+    {{ JS.push('js/lib/jquery.bootstrap-touchspin.js') }}
+    {{ JS.push('js/lib/tinycolor.js') }}
+    {{ JS.push('js/lib/bootstrap.colorpickersliders.js') }}
     {{ JS.push('js/app_config.js') }}
     {{ JS.push('js/console.js') }}
     {{ JS.push('js/app.js') }}
