--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
             <div class="col-md-12">
                 <ul>
                     <li>Follow <a href="https://twitter.com/pixelcite">@pixelcite</a>.</li>
-                    <li>Made by <a href="https://twitter.com/onyxfish">@onxyfish</a>, &copy; 2014.</li>
+                    <li>Made by <a href="https://twitter.com/onyxfish">@onyxfish</a>, &copy; 2014.</li>
                     <li>Based on <a href="https://twitter.com/nprviz">@nprviz</a>'s <a href="https://github.com/nprapps/quotable">quotable</a>.</li>
                     <li>This site stores no user data.</li>
                     <li>Send feedback to <a href="mailto:pixelcite@gmail.com">pixelcite@gmail.com</a>.</li>
