Remove affiliate linking.

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,16 +25,16 @@
             <div class="controls-wrapper">
             <form role="form">
                 <div class="form-group">
-                    <label for="status">Tweet text *</label>
+                    <label for="status">Tweet text</label>
                     <textarea id="status" name="status" class="form-control"></textarea>
                     <div class="count"></div>
                 </div>
                 <div class="form-group">
-                    <label for="quotetext">Quote &dagger;</label>
+                    <label for="quotetext">Quote *</label>
                     <textarea id="quote" name="quote" class="form-control" rows="4"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="source">Author / Source &dagger;</label>
+                    <label for="source">Author / Source *</label>
                     <input id="source" name="source" class="form-control" />
                 </div>
                 <div class="container-fluid">
@@ -55,8 +55,7 @@
                     <div class="row">
                         <div class="form-group col-md-12">
                             <p class="help-block">
-                                * Pixelcite adds affiliate codes to some URLs.<br />
-                                &dagger; HTML is allowed. Use &lt;br /&gt; for line breaks.
+                                * HTML is allowed. Use &lt;br /&gt; for line breaks.
                             </p>
                         </div>
                     </div>
